<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/linearLayout1">
        <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/clear_screen" android:text="@string/clear_screen"></Button>
        <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/read_tag" android:text="@string/read_tag"></Button>
        <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/write_tag" android:text="@string/write_tag"></Button>
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/page_no" android:text="@string/page_no"></TextView>
        <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/input_text"></EditText>
    </LinearLayout>
    <EditText android:layout_width="fill_parent" android:id="@+id/note" android:layout_height="fill_parent" android:gravity="top" android:text="@string/default_note_text"></EditText>
</LinearLayout>
